[package]
name = "trustoline"
version = "0.1.0"
edition = "2021"
autotests = false

[profile.dev]
panic = "abort"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-sys = { version = "0.42.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_System_JobObjects",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WindowsProgramming",
] }
# This provides implementations of memcpy, memset, etc., which the compiler assumes
# are available.
compiler_builtins = { version = "*", features = ["mem"]}
ufmt-write = "*"
ufmt = "*"

[build-dependencies]
embed-manifest = "*"
